# Banking-Agentic-Rag

./: .gitignore  README.md  agent.py  app.py  evaluate.py  ingest.py  pyproject.toml  tools.py
eval_data/: evaluation_results.json  test_questions.json
